<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:gravity="center"
              android:orientation="vertical">

    <CheckBox
            android:id="@+id/checkboxHasPhotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_has_photos"/>

    <CheckBox
            android:id="@+id/checkboxFavourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_favourites"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_height="wrap_content">

        <com.appyvet.materialrangebar.RangeBar
                android:id="@+id/rangeBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrb_barWeight="2dp"
                app:mrb_connectingLineWeight="1dp"
                app:mrb_leftSelectorColor="#FFB300"
                app:mrb_pinColor="#6c3f6a"
                app:mrb_pinMaxFont="16sp"
                app:mrb_pinMinFont="12sp"
                app:mrb_pinRadius="14dp"
                app:mrb_rangeBar="true"
                app:mrb_rangeBarPaddingBottom="30dp"
                app:mrb_rangeBar_rounded="true"
                app:mrb_rightSelectorColor="#1E88E5"
                app:mrb_selectorBoundarySize="2dp"
                app:mrb_selectorSize="15dp"
                app:mrb_tickEnd="95"
                app:mrb_tickHeight="3dp"
                app:mrb_tickInterval="1"
                app:mrb_tickLabelSize="4sp"
                app:mrb_tickStart="18"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/buttonApply"
                android:layout_width="match_parent"
                android:text="@string/label_apply"
                android:layout_weight="1"
                android:layout_height="40dp"/>

        <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:text="@string/label_cancel"
                android:layout_weight="1"
                android:layout_height="40dp"/>

    </LinearLayout>

</LinearLayout>