<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.jaydeepw.matchfilter.views.MainActivity">
    <item android:id="@+id/action_filter"
          android:title="@string/action_filter"
          android:orderInCategory="100"
          app:showAsAction="always"/>
</menu>
